@@ -1,5 +1,7 @@
 Sun Sep 19 10:43:31 1999  Jeffrey A Law  (law@cygnus.com)
 
+	* config/tc-hppa.c (pa_ip): Handle 'B' operand.
+
 	* config/tc-hppa.c (pa_ip): Handle 'L' and 'M' operands.
 
 	* config/tc-hppa.c (pa_ip): Handle 'l' operand.
